grammar.js
        source_file: $ => repeat($.top_level_statement),
        
        // intrinsic: $ => seq(token.immediate('#'), choice($.identifier, $.access, $.call)),

        variable_definition: $ => seq(
            optional( field('attr', $.attribute_attachment) ),
            field('name', $.identifier),
            optional(seq(
                ':',
                field('type', $.type_like)
            )),
            ':=', 
            field('value', $.expression),
            ';'
        ),
        
        // v: u32;
        variable_declaration: $ => seq(
            optional( field('attr', $.attribute_attachment) ),
            field('name', $.identifier),
            ':',
            field('type', $.type_like),
            ';'
        ),

        // c :: 42;
        constant_definition: $ => prec(precedences['const'], seq(
            optional( field('attr', $.attribute_attachment) ),
            field('name', $.identifier),
            optional(seq(
                ':',
                field('type', $.type_like),
            )),
            //choice(
                '::',
                //seq(':', field('type', $.expression), ':'),
            //),
            field('value', $.expression),
            ';'
        )),

        // p: t = v
        parameter: $ => seq(
            optional( field('attr', $.attribute_attachment) ),
            field('name', $.identifier),
            choice(
                seq(
                    ':',
                    field('type', $.type_like),
                    optional(seq(
                        choice(':=', '::'),
                        field('default_value', $.expression)
                    ))
                ),
                seq(
                    ':=',
                    field('default_value', $.expression)
                ),
                seq(
                    '::',
                    field('default_value', $.expression)
                )
            )
        ),

        // fn :: () -> T {}
        // fn :: () => {}
        struct_literal: $ => //prec.right(precedences['struct'], 
            seq(
                optional( field('attr', $.attribute_attachment) ),
                'struct',
                '{',
                repeat(choice(
                    $.variable_declaration,
                    $.variable_definition,
                    $.constant_definition, 
                )),
                '}',
            ),
        //),

        enum_value: $ => seq(
            optional( field('attr', $.attribute_attachment) ),
            field('name', $.identifier),
            ':',
            field('value', $.expression),
            ';'
        ),

        enum_literal: $ => //prec.right(precedences['enum'], 
            seq(
                optional( field('attr', $.attribute_attachment) ),
                'enum',
                '{',
                repeat($.enum_value),
                '}'
            ),
        //),

        union_literal: $ => //prec.right(precedences['enum'], 
            seq(
                optional( field('attr', $.attribute_attachment) ),
                'union',
                '{',
                    $.type_like,
                    repeat1(seq(
                        ',',
                        $.type_like,
                    )),
                '}'
            ),
        //),

        applied_concept: $ => seq(
            '#', 
            token(/[A-z_][A-z0-9_]+/),
            //optional(seq(
            //    '[',
            //    comma_separated_list1($.expression), 
            //    ']'
            //))
        ),

        concept_literal: $ => seq(
            optional( field('attr', $.attribute_attachment) ),
            'concept',
            '[', 
                field('typename', $.identifier),
                optional(seq(
                    ':',
                    field('concept', $.applied_concept)//$.identifier)
                )),
                optional(seq(
                    ',',
                    comma_separated_list1($.parameter)
                )),
            ']',
            field('body', $.block)
        ),

        block: $ => prec.right(seq(
            '{', repeat($.statement), '}'
        )),
        
        optional_statement: $ => seq(
            field('condition', $.expression),
            '??',
            field('alternative', choice(
                $.block,
                $.expression_statement
            )),
        ),
        
        requires_statement: $ => seq(
            'requires',
            optional(seq(
                '(',
                comma_separated_list1($.parameter),
                ')', 
                '=>'
            )),
            choice(
                $.block,
                $.expression_statement
            )
        ),

        mathexpr: $ => prec(precedences['mathexpr'], seq(
            'calc',
            optional(seq(
                '->',
                field('return_type', $.type_like)
            )),
            '{',
            token.immediate(/[A-z0-9_;,\\'"\.\+\-*\/%()^|&=!<> \n]+/),
            '}',
        )),

        signed_int_t: $ => token(choice(
            'i8',
            'i16',
            'i32',
            'i64',
            'i128'
        )),

        unsigned_int_t: $ => token(choice(
            'u8',
            'u16',
            'u32',
            'u64',
            'u128'
        )),

        string_t: _ => token('string'),

        type_t: _ => token('type'),
        rune_t: _ => token('rune'),
        code_t: _ => token('code'),

        option: $ => prec.right( seq('?[', $.type_like, ']') ), // seq($.type_like, '?'),
        integer_literal: $ => token(seq(
            choice(
                decimal_digits_pattern,
                (/0[xX][0-9a-fA-F_]*[0-9a-fA-F]+/), // Hex
            ),
            optional(/u8|u16|u32|u64|u128|i8|i16|i32|i64|i128/)
        )),

        rune_literal: $ => seq(
            '\'',
            choice(
                token.immediate(/[^'\\]/), 
                $.escape_sequence
            ),
            '\'',
        ),

        string_literal: $ => seq(
            '"',
            repeat(choice(
                $.string_literal_fragment,
                $.escape_sequence
            )),
            '"'
        ),
    
        string_literal_fragment: $ => token.immediate(prec(1, /[^"\\\n]+/)),
        
        escape_sequence: $ => token(choice(
            /\\x[0-9a-fA-F][0-9a-fA-F]?[0-9a-fA-F]?[0-9a-fA-F]?/,
            /\\u[0-9a-fA-F][0-9a-fA-F][0-9a-fA-F][0-9a-fA-F]/,
            /\\U[0-9a-fA-F][0-9a-fA-F][0-9a-fA-F][0-9a-fA-F][0-9a-fA-F][0-9a-fA-F][0-9a-fA-F][0-9a-fA-F]/,
            /\\[^xuU]/,
        )),
        
        
        raw_string_literal: $ => token(seq(
            /""["]+/,
            optional(/([^"]|("[^"])|(""[^"]))+/),
            /""["]+/
            )),
            
        code_literal_fragment: $ => token.immediate(prec(1, /[^`\\\n]+/)),
        
        code_literal: $ => seq(
            '`',
            /[A-z_]+/,
            repeat1(choice(
                $.code_literal_fragment,
                $.escape_sequence
            )),
            '`'
        ),
        
        raw_code_literal: $ => token(seq(
            /``[`]+/,
            /[A-z_]+/,
            /([^`]|(`[^`])|(``[^`]))+/,
            /``[`]+/
        )),

        comment: $ => token(choice(
            seq('//', /[^\n\r]*/)
        )),

        _name: $ => /[a-zA-Z_][a-zA-Z0-9_]*/,
        //keyword: $ => choice(),
        identifier: $ => $._name, //choice($._name, $.keyword),
    }
})

function comma_separated_list(rule) {
    return optional(comma_separated_list1(rule))
}

function comma_separated_list1(rule) {
    return seq(
        rule,
        repeat(seq(
            ',',
            rule
        ))
    )
}
